ci: fix GH Pages workflow; force redeploy

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -1,7 +1,8 @@
 ﻿name: Deploy GitHub Pages
-'on':
+on:
   push:
     branches: [ 'main' ]
+  workflow_dispatch:
 permissions:
   contents: read
   pages: write
